# peng_rs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  build.rs  resources  run.sh
src/: lib.rs  main.rs  utils.rs
src/core/: asset.rs  engine.rs  mod.rs
src/ffi/: mod.rs
src/math/: vector2.rs
src/rendering/: mod.rs  window_icon.rs  window_subsystem.rs
src/scene/: mod.rs
wrapper/: engine.cpp  engine.h  w_engine.cpp  w_engine.h  w_logging.cpp  w_logging.h  w_vector2.cpp  w_vector2.h  w_window_subsystem.cpp  w_window_subsystem.h  wrapper.h
